@@ -5,6 +5,7 @@
 	* Fixed bug #15737: quoteStrForLike does not properly escape strings in sql_mode NO_BACKSLASH_ESCAPES
 	* Fixed bug #16653: SQL injection problem in class.db_list.inc (thanks to Jigal van Hemert)
 	* Fixed bug #15735: FORM content object is susceptible to XSS (thanks to Benjamin Mack)
+	* Fixed bug #16362: Directory traversal attack in em_unzip
 
 2010-11-12  Ernesto Baschny  <ernst@cron-it.de>
 
